Added angular code to pull data from REST service and displays in the views

--- a/MyDjangoAngularProject/djangoapp/static/partials/partial1.html
+++ b/MyDjangoAngularProject/djangoapp/static/partials/partial1.html
@@ -1,1 +1,7 @@
 <p>This is the partial for view 1.</p>
+<div ng-repeat="photo in photos">
+	<b>Photo Url: </b>{{photo.url}}<br/>
+	<b>Photo Name: </b>{{photo.name}}<br/>
+	<b>Album Id: </b>{{photo.album}}<br/>
+	<br/>
+</div>
